fix label overflowed

--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -1,6 +1,5 @@
 .md-card-schedule {
   position: relative;
-  display: inline-block;
   height: $height-element;
   padding: 8px 10px;
   background-color: $color-element;
